syntax = "proto3";

package userService;

option java_package = "vn.com.msb.db.proto.user";

message RequestMessage {
	string content = 1;
}
message ResponseMessage {
    string result = 1;
}


service UserService {
  rpc getCustomer(RequestMessage) returns (ResponseMessage) {};
}
